# pre-commit-uv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini  tox.toml
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
src/: pre_commit_uv_patch.pth
src/pre_commit_uv/: __init__.py
task/: dev_pth.py
tests/: test_health_check.py  test_main.py
